<resources>
    // APP Name
    <string name="app_name" translatable="false">Tooth Wallet</string>
    <string name="app_name_underlined" translatable="false"><u>Tooth Wallet</u></string>
    <string name="app_logo">Logo Empresa Circle</string>
    <string name="tooth_loading" translatable="false">tooth_loading</string>

    // Walkthrough Constants
    <string name="lazyRegister_begin_title">
        FINANÇAS PESSOAIS TÃO SIMPLES QUANTO UM SORRISO
    </string>

    <string name="lazyRegister_begin_description">
        Confiável, Projetado Para Tornar o Gerenciamento de Finanças Pessoais Tão Simples Quanto Um Sorriso.
    </string>

    <string name="lazyRegisterDone">Cadastro Realizado com sucesso!</string>
    <string name="lazyRegisterRedirect">Estamos Redirecionando você para a tela principal</string>
    <string name="lazyRegisterWelcome">Bem Vindo ao Tooth Wallet</string>

    <string name="lazyRegister_step1_description1">Vamos Começar!</string>
    <string name="lazyRegister_step1_description2">Qual é seu nome?</string>
    <string name="lazyRegister_step2_description1">Certo! Continuando…</string>
    <string name="lazyRegister_step2_description2">Qual será sua senha?</string>
    
    // Login Constants
    <string name="login_loginScreen">Tela de Login</string>
    <string name="login_inputEmail">Digite seu E-mail</string>
    <string name="login_inputPassword">Digite sua Senha</string>

    // Buttons Constants
    <string name="login_button">Acessar</string>
    <string name="lazyRegister_begin_button">Começar</string>
    <string name="lazyRegister_begin_login">Já tenho uma Conta</string>
    <string name="lazyRegister_begin_register">Criar uma Conta</string>
    <string name="lazyRegister_continue">Continuar</string>
    <string name="lazyRegister_nameInput">Nome</string>
    <string name="lazyRegister_passwordInput">Senha</string>
    <string name="login_emailInputButton" translatable="false">Login</string>
    <string name="home_add_button">Adicionar</string>
    <string name="home_add_plus" translatable="false">+</string>
    <string name="settings_logout_button">Sair</string>
    <string name="dialog_confirmation">Confirmar Logout?</string>
    <string name="dialog_confirmation_yes">Sim</string>
    <string name="dialog_confirmation_cancel">Cancelar</string>


    // Loading Constants
    <string name="loading_step1">Aguarde, Carregando…</string>
    <string name="loading_step2">Atualizando Tabelas…</string>
    <string name="loading_step3">Verificando Base de Dados…</string>

    <string-array name="loading_steps">
        <item>@string/loading_step1</item>
        <item>@string/loading_step2</item>
        <item>@string/loading_step3</item>
    </string-array>

    <string name="lazyRegister_return">Voltar</string>

    // Home Constants

    <string name="home_topText1">Olá {USUÁRIO}!</string>
    <string name="home_topText2">Nenhuma pendência hoje.</string>
    <string name="home_accountTopText"><u>Contas</u></string>
    <string name="home_DefaultTopText">Parece que você não possui nenhum registro financeiro cadastrado…</string>
    <string name="home_registroDespesasText1">Registro de Despesas</string>
    <string name="home_registroDespesasText1_underlined"><u>Registro de Despesas</u></string>
    <string name="home_registroDespesasbottomText1">Vazio por aqui…</string>

    // Settings Constants

    <string name="settings_topText">Configurações</string>
    <string name="darkMode">Modo Escuro</string>
    <string name="notifications">Notificações</string>

    // Adding Payment/Expenses Constants

    <string name="paymentEntry_topText">Adicionar Forma de Pagamento</string>
    <string name="paymentEntry_topText_underlined"><u>Adicionar Forma de Pagamento</u></string>
    <string name="paymentEntry_topText_underlined_edit"><u>Editar Forma de Pagamento</u></string>
    <string name="paymentEntry_entryName">Nome</string>
    <string name="paymentEntry_entryDesc">Descrição (Opcional)</string>
    <string name="paymentEntry_entryValue">Valor da Conta</string>
    <string name="paymentEntry_colorValue">Cor da Conta</string>
    <string name="expenseEntry_topText">Adicionar Despesa</string>
    <string name="expenseEntry_topText_underlined"><u>Adicionar Despesa</u></string>
    <string name="expenseEntry_topText_underlined_edit"><u>Editar Despesa</u></string>
    <string name="expenseEntry_entryTitle">Titulo da Despesa</string>
    <string name="expenseEntry_entryMethod">Metódo de Pagamento</string>
    <string name="toast_Success">Adicionado com sucesso!</string>
    <string name="toast_Failure">Falha ao Adicionar!</string>


    // BankAccounts Menu Constansts
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Excluir</string>

    // BankAccounts Dialog Constants
    <string name="confirm_delete">Deseja excluir essa forma de Pagamento?</string>
    <string name="confirm_delete_yes">Excluir</string>
    <string name="confirm_delete_no">Cancelar</string>
    <string name="toast_SuccessDelete">Excluido com sucesso!</string>
    <string name="toast_FailureDelete">Falha ao Deletar!</string>

    // Expenses Dialog Constants
    <string name="confirm_delete_Expense">Deseja excluir essa despesa?</string>

</resources>