<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_walkthrough"
    tools:context=".controller.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/cellphoneDialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <Button
            android:id="@+id/btnReturnLogin"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#00FFFFFF"
            android:fontFamily="@font/roboto"
            android:text="@string/lazyRegister_return"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/InputEmail"
            style="@style/inputEmail"
            android:layout_width="210dp"
            android:layout_height="49dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/login_inputEmail"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginText" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="14sp"
            android:text="@string/app_name_underlined"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/LoginText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:lineSpacingExtra="14sp"
            android:text="@string/login_loginScreen"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appName" />

        <Button
            android:id="@+id/button"
            style="@style/buttonYellow"
            android:text="@string/login_emailInputButton"
            android:onClick="login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputPassword"
            app:layout_constraintVertical_bias="0.077" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="269dp"
            android:layout_height="264dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.512"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.268"
            app:srcCompat="@drawable/login_icon" />

        <EditText
            android:id="@+id/InputPassword"
            style="@style/inputEmail"
            android:layout_width="210dp"
            android:layout_height="49dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/login_inputPassword"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputEmail" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>