<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LazyRegister2Fragment">

    <TextView
        android:id="@+id/TextView2"
        android:layout_width="252dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:text="@string/lazyRegister_step2_description2"
        android:textColor="@color/yellow"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView" />

    <TextView
        android:id="@+id/TextView"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/lazyRegister_step2_description1"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/btnContinue2"
        android:layout_width="164dp"
        android:layout_height="50dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/yellow_rounded"
        android:elevation="7dp"
        android:fontFamily="@font/roboto"
        android:text="@string/lazyRegister_continue"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="257dp"
        android:layout_height="286dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/security_pass" />

    <Button
        android:id="@+id/btnReturn"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/roboto"
        android:text="@string/lazyRegister_return"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>