<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app_walkthrough"
    tools:context=".controller.EditExpenseActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="320dp"
        android:layout_height="74dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="172dp"
                android:layout_height="23dp"
                android:text="@string/home_topText1"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.313" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="172dp"
                android:layout_height="23dp"
                android:text="@string/home_topText2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.764" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="43dp"
                android:layout_height="45dp"
                android:onClick="cancelActivity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.086"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/default_profile" />

            <FrameLayout
                android:layout_width="53dp"
                android:layout_height="54dp"
                android:onClick="cancelActivity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.924"
                app:layout_constraintStart_toEndOf="@+id/imageView7"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.514">


                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/home_icon" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="320dp"
        android:layout_height="506dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.18">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="301dp"
            android:layout_height="481dp"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/titleExpenseEntryName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:text="@string/expenseEntry_entryTitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.197"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/paymentEntry_entryValue"

                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/inputExpenseEditName"
                app:layout_constraintTop_toBottomOf="@+id/inputExpenseEditName" />

            <Button
                android:id="@+id/button"
                style="@style/buttonYellow"
                android:layout_marginTop="40dp"
                android:text="@string/home_add_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="2.5" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="0.45dp"
                android:gravity="center"
                android:lineSpacingExtra="8sp"
                android:text="@string/expenseEntry_topText_underlined_edit"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputExpenseEditName"
                android:layout_width="180dp"
                android:layout_height="42dp"
                android:elevation="0.45dp"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.305"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleExpenseEntryName" />


            <EditText
                android:id="@+id/inputExpenseValueEdit"
                android:layout_width="123dp"
                android:layout_height="48dp"
                android:elevation="0.45dp"
                android:ems="10"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.224"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView15" />

            <Button
                android:id="@+id/button3"
                style="@style/buttonYellow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:text="@string/menu_edit"
                android:onClick="UpdateExpense"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.234"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnCancel"
                android:onClick="cancelActivity"
                style="@style/buttonRed_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:text="@string/dialog_confirmation_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toEndOf="@+id/button3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>